xpcom/reflect/xptcall/md/win32/xptcstubs_x86_64_gnu.cpp
@@ -138,7 +138,10 @@ PrepareAndDispatch(nsXPTCStubBase * self, uint32_t methodIndex,
 
         case nsXPTType::T_FLOAT:
              if (iCount < PARAM_FPR_COUNT)
-                dp->val.f  = (float)fprData[iCount++];
+                // The value in xmm register is already prepared to
+                // be retrieved as a float. Therefore, we pass the
+                // value verbatim, as a double without conversion.
+                dp->val.d  = (double)fprData[iCount++];
              else
                 dp->val.f  = *((float*)ap++);
              break;
@@ -152,7 +155,9 @@ PrepareAndDispatch(nsXPTCStubBase * self, uint32_t methodIndex,
 
         case nsXPTType::T_BOOL:
            if (iCount < PARAM_GPR_COUNT)
-              dp->val.b  = (bool)gprData[iCount++];
+              // We need the cast to uint8_t to remove garbage on upper 56-bit
+              // at first.
+              dp->val.b  = (bool)(uint8_t)gprData[iCount++];
            else
               dp->val.b  = *((bool*)ap++);
            break;
